--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add 테스트</title>
+    <title>버그 수정중!</title>
   </head>
   <body>
     나는 다른사람이야!
