--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add 테스트</title>
+    <title>메인은 그대로 진행!</title>
   </head>
-  <body>
-    나는 다른사람이야!
-  </body>
+  <body></body>
 </html>
