--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>메인은 그대로 진행!</title>
   </head>
-  <body>
-    <p>새로운 기능입니다!</p>
-  </body>
+  <body></body>
 </html>
